# fastapi-sqlmodel-tutorial

./: .gitignore  pyproject.toml
fastapi_sqlmodel_tutorial/: app.py
tests/: test_fastapi_sqlmodel_tutorial.py
